# helpdesk

./: .env  .env-template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  mypy.ini  prometheus.yml  pyproject.toml  requirements.txt
backend/: manage.py  seed_data.py  seed_mongo_rules.py
backend/authentication/: serializers.py  urls.py  views.py
backend/core/: apps.py  metrics.py  models.py  permissions.py  signals.py  tasks.py  urls.py  views.py
backend/core/ai/: mongo_rules.py  ollama_client.py  ollama_generate.py  ticket_classifier.py
backend/core/filters/: tickets.py  users.py
backend/core/kb/: elasticsearch_client.py  search.py
backend/core/migrations/: 0001_initial.py  0002_alter_ticket_status.py  0002_comment_parent.py  0003_membership.py  0003_ticket_priority.py  0004_alter_membership_options_alter_membership_table.py  0004_kb_fulltext_search.py  0005_membership_active_tickets_count_and_more.py  0005_remove_membership_unique_active_admin_per_organization_and_more.py  0005_ticket_resolved_at.py  0006_user_last_organization_leave_application.py  (+2 more)
backend/helpdesk/: asgi.py  celery.py  celery_signals.py  settings.py  urls.py  wsgi.py
backend/testapp/: admin.py  models.py
frontend/: package-lock.json  package.json  vite.config.mjs
frontend/src/: App.jsx  contants.js  index.css  main.jsx
grafana/dashboards/: main-dashboard.json
helpdesk/: .env  manage.py
helpdesk/coreapp/: models.py  serializers.py  urls.py  views.py
helpdesk/helpdesk/: settings.py  urls.py
helpdesk/testapp/: admin.py  models.py
(+136 files in other folders)
